--- a/styles.css
+++ b/styles.css
@@ -94,6 +94,16 @@ ul li a:hover {
 
 .section__container {
   min-height: 100vh;
+  max-width: 1000px;
+  min-width: 500px;
+  margin: auto;
+  padding: 1rem;
+  display: grid;
+  gap: 4rem;
+}
+
+.section__container-home {
+  min-height: 100vh;
   max-width: var(--max-width);
   margin: auto;
   padding: 1rem;
@@ -116,6 +126,15 @@ ul li a:hover {
 }
 
 .title {
+  font-size: 2.5rem;
+  font-weight: 400;
+  line-height: 3rem;
+  color: var(--text-dark);
+  margin-bottom: 1rem;
+}
+
+.lead-title-about {
+  margin-top: 100px;
   font-size: 2.5rem;
   font-weight: 400;
   line-height: 3rem;
@@ -150,24 +169,6 @@ ul li a:hover {
   cursor: pointer;
 }
 
-.hire__me {
-  background-color: var(--primary-color);
-  color: #ffffff;
-}
-
-.hire__me:hover {
-  background-color: var(--primary-color-dark);
-}
-
-.portfolio {
-  color: var(--primary-color);
-}
-
-.portfolio:hover {
-  background-color: var(--primary-color-dark);
-  color: #ffffff;
-}
-
 .image {
   display: grid;
   place-items: center;
@@ -179,7 +180,6 @@ ul li a:hover {
 }
 
 .items-list {
-  padding-top: 99px;
   margin-top: 2rem; /* Adjust based on layout */
 }
 
@@ -211,6 +211,73 @@ ul li a:hover {
   background-color: #f0f0f0; /* Optional: Change background on hover for visual feedback */
   cursor: pointer; /* Changes the cursor to indicate it's clickable */
 }
+
+.contact-info {
+  list-style: none;
+  padding: 0;
+}
+
+.contact-item {
+  margin-bottom: 10px;
+  display: flex;
+  align-items: center;
+}
+
+.contact-item i {
+  margin-right: 10px;
+  font-size: 24px;
+}
+
+.contact-item a {
+  text-decoration: none;
+  color: #fb9062; /* Adjust the color to match your design */
+}
+
+.contact-item a:hover {
+  text-decoration: underline;
+  color: #eeaf61;
+}
+
+.accordion {
+  background-color: #ffeff4;
+  font-family: "Poppins", sans-serif;;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  text-align: left;
+  border: none;
+  outline: none;
+  transition: 0.4s;
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active, .accordion:hover {
+  background-color: #ffe1eb;
+}
+
+/* Style the accordion panel. Note: hidden by default */
+.panel {
+  padding: 0 18px;
+  background-color: white;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+}
+
+
+.accordion:after {
+  content: '\02795'; /* Unicode character for "plus" sign (+) */
+  font-size: 13px;
+  color: #ffe1eb;
+  float: right;
+  margin-left: 5px;
+}
+
+.active:after {
+  content: "\2796"; /* Unicode character for "minus" sign (-) */
+}
+
 
 @media (width < 750px) {
   nav .checkbox {
